improve doc